--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>HREI Reviews</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="reviews"></div>
   <script src="./bundle.js"></script>
 </body>
 </html>
